--- a/ApplicationMarcassin/CreateCompetence.xaml
+++ b/ApplicationMarcassin/CreateCompetence.xaml
@@ -5,59 +5,55 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ApplicationMarcassin"
       mc:Ignorable="d" 
-      d:DesignHeight="550" d:DesignWidth="750"
-      Title="CreateCompetence">
+      d:DesignHeight="700" d:DesignWidth="1200"
+      Title="CreateCompetence"
+      Background="#ecf0f1">
 
     <Grid Background="Transparent">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="1.25*"/>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="0.5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="4*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0">Ajout de Compétence</Label>
+        <Label HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="0" FontSize="30" Foreground="#FCA324">Ajout de Compétence</Label>
 
-        <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Content="Intitulé"/>
-        <TextBox Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" Name="C1">Intitule</TextBox>
+        <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Intitulé" FontSize="18" Foreground="#FCA324"/>
+        <TextBox Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" Name="C1" Width="250" Height="35"></TextBox>
 
-        <Label Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1"  Content="Date"/>
-        <Calendar VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="4" Grid.Row="2" Grid.RowSpan="1" Grid.ColumnSpan="1" Name="C3"/>
+        <Label Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1"  Content="Date" FontSize="18" Foreground="#FCA324"/>
+        <Calendar VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="4" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" Name="C3"/>
 
-        <Label VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Name="LabelDescription" Content="Description"/>
-        <TextBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Height="100" x:Name="C2" Grid.Column="2" Grid.Row="2" Text="Description"/>
+        <Label VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Name="LabelDescription" Content="Description" FontSize="18" Foreground="#FCA324"/>
+        <TextBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="250" Height="130" x:Name="C2" Grid.Column="2" Grid.Row="2"/>
 
 
-        <Label Content="Langue" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ListBox Name="list" Grid.Column="2" Grid.Row="3">
+        <Label Content="Langue" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" Foreground="#FCA324"/>
+        <ListBox Name="list" Grid.Column="2" Grid.Row="3" Width="250" Height="130">
         </ListBox>
-        <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="4" Grid.Row="3">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                <Label VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="CompetenceActuel :"/>
-                <ListBox ItemsSource="{Binding list2}" SelectedItem="{Binding CompetenceActuel}" Name="list2">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Label Content="{Binding IntituleCompetence}"/>
-                                <Label Content="{Binding Annee}">
-                                </Label>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-                <Label x:Name="test"/>
-            </StackPanel>
-        </Border>
-        <Border Grid.Column="2" Grid.Row="4">
+        <Label Grid.Row="2" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Competence actuelle" FontSize="18" Foreground="#FCA324"/>
+        <ListBox Grid.Row="2" Grid.Column="4" ItemsSource="{Binding list2}" SelectedItem="{Binding CompetenceActuel}" x:Name="list2" Width="250" Height="130">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Label Content="{Binding IntituleCompetence}"/>
+                        <Label Content="{Binding Annee}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <Label x:Name="test"/>
+        <Border Grid.Column="4" Grid.Row="3" Width="250" Height="130">
             <Grid Background="Transparent">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -73,13 +69,12 @@
                 </CheckBox>
                 <Label x:Name="test2"></Label>
                 <Label  Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">Actuel :</Label>
-                <ToggleButton   Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="B_Actuel">
-                    On/off
-                </ToggleButton>
+                <CheckBox Checked="B_Actif_Checked" Unchecked="B_Actif_Unchecked" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="B_Actuel">
+                </CheckBox>
             </Grid>
         </Border>
-        <Label x:Name="l1" RenderTransformOrigin="0.505,9.3" Height="78"/>
-        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Width="50" Grid.Column="4" Grid.Row="4" x:Name="b" Click="b_Click" Content="Ok"/>
+        <Label x:Name="l1" Height="78"/>
+        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Grid.Column="4" Grid.Row="4" x:Name="b" Click="b_Click" Content="Creation" Height="35" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}"/>
 
     </Grid>
 </Page>
