--- a/ApplicationMarcassin/ModificationGroupe.xaml
+++ b/ApplicationMarcassin/ModificationGroupe.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ApplicationMarcassin"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="ModificationGroupe">
 
 
@@ -23,7 +23,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="Création Groupe"/>
+        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="Modification Groupe"/>
 
         <!--Titre-->
         <Label Grid.Column="0" Grid.Row="1" Content="Titre : "/>
